# digest_google

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: config.py  gmail.py  google_api.py  main.py
