[project]
name = "digest-google"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "black>=26.1.0",
    "google-api-python-client>=2.189.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "pre-commit>=4.5.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
